--- a/Landing-page/style.css
+++ b/Landing-page/style.css
@@ -4,9 +4,10 @@ h1 {
 
 footer {
     background-color: #fffd8c;
-    max-width: 1200px;
+    max-width: auto;
     text-align:left;
-    margin: 0 auto;
+    margin:0 auto;
+    padding: 0px;
 }
 
 .logo-image {
