--- a/Landing-page/style.css
+++ b/Landing-page/style.css
@@ -1,9 +1,18 @@
 h1 {
     font-size: 80px;
+    color: #333133;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h2 {
     font-size: 40px;
+    color: #333133;
+}
+
+h3 {
+    font-size: 20px;
+    font-family: monospace;
+    color: #333133;
 }
 
 .calc {
@@ -14,68 +23,70 @@ h2 {
     font-size: 20px;
     font-family: monospace;
     border: none;
+    width: 100px;
 }
 
 input[type=text] {
-    width: 20%;
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #f7f7ff;
-    border-radius: 4px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
     box-sizing: border-box;
 
 }
 
 input[type=email] {
-    width: 20%;
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 8px;
     box-sizing: border-box;
+
 }
 
-inptu[ id=phone] {
-    width: 20%;
+#phone {
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #f7f7ff;
-    border-radius: 4px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
     box-sizing: border-box;
 }
 
 input[id=Hours] {
-    width:150px;
+    width: 150px;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 2px solid #f7f7ff;
-    border-radius: 4px;
+    border: 2px solid#cccf;
+    border-radius: 8px;
     box-sizing: border-box;
 }
 
 input[id=City] {
-    width: 20%;
+    width: 250px;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #f7f7ff;
-    border-radius: 4px;
+    border: 1px solid#ccc;
+    border-radius: 8px;
     box-sizing: border-box;
 }
 
 .drive {
     background-color: #57eeab;
     color: black;
-    border-radius: 4px;
+    border-radius: 8px;
     font-size: 40px;
     padding: 3px 12px;
     font-family: initial;
     border: none;
-    width: 0 auto;
+    width: 100%;
 }
 
 footer {
@@ -92,4 +103,20 @@ footer {
 
 .container {
     background-color: #f7f7ff;
+}
+
+.apply-form {
+    width: 50%;
+    background-color: white;
+    border: 5px solid white;
+    box-shadow: 5px 8px 10px grey;
+    border-radius: 10px;
+}
+
+.footer-container {
+    display: flex;
+}
+
+.apply-form a {
+    color: red;
 }
