--- a/Landing-page/style.css
+++ b/Landing-page/style.css
@@ -1,23 +1,23 @@
 /* For Mobile */
 @media only screen and (min-width:320px) {
     .logo-image {
-        width: 50%;
+        width: 40%;
         margin: 25px;
     }
 
-    #main-content{
+    #main-content {
         background-image: url(./image/bg-image/scooter.svg);
+        background-repeat: no-repeat;
     }
 
     h1 {
-        font-size: 80px;
+        font-size: 50px;
         color: #333133;
         font-family: 'Montserrat';
-        padding: 10px 28px;
     }
 
     .p1 {
-        font-size: 40px;
+        font-size: 20px;
         padding: 10px 20px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
@@ -99,32 +99,37 @@
         margin: 90px;
         margin-bottom: 0;
     }
-/* I choose this element so they can match up the mockup  */
+
+    /* I choose this element so they can match up the mockup  */
     .drive {
         background-color: #57eeab;
         border-radius: 10px;
         font-size: 40px;
         font-family: 'Montserrat';
-        padding:2px 10px;
-        width:100%;
+        padding: 2px 10px;
+        width: 100%;
     }
-/* adding the color to match up the mockup */
+
+    /* adding the color to match up the mockup */
     footer {
         background-color: #fffd8c;
     }
-/* Given the code a display of flex so the social media icon can have evenly space */
+
+    /* Given the code a display of flex so the social media icon can have evenly space */
     .socialmedia-icon {
         display: flex;
         justify-content: space-evenly;
     }
-/* Increaseing the size of the checkbox to match the mockup */
+
+    /* Increaseing the size of the checkbox to match the mockup */
     #terms {
         height: 25px;
         width: 25px;
         background-color: #eee;
         border-radius: 50%;
     }
-/* The border-radius it's to increase the curve of the box and the elements match up the mockup */
+
+    /* The border-radius it's to increase the curve of the box and the elements match up the mockup */
     .calc {
         background-color: #ff8480;
         color: white;
@@ -155,12 +160,14 @@
         width: 100%;
 
     }
-/* I used display flex to make the footer element wrap */
+
+    /* I used display flex to make the footer element wrap */
     .footer-container {
         display: flex;
         flex-wrap: wrap;
     }
-/* Used the color to match the mockup */
+
+    /* Used the color to match the mockup */
     .apply-form a {
         color: #ff8480;
     }
@@ -249,8 +256,19 @@
         flex-direction: row-reverse;
         justify-content: end;
     }
-/* moving the applyform to the right to match the mockup */
+
+    /* moving the applyform to the right to match the mockup */
     .apply-form {
         margin-left: auto;
+        margin: 20px;
+        width: 50%;
+    }
+
+    #main-content {
+        display: flex;
+    }
+
+    .p1{
+        font-size: 20px;
     }
 }
