--- a/midterm/style.css
+++ b/midterm/style.css
@@ -13,6 +13,7 @@
 
     a:link {
         text-decoration: none;
+        color: #f2f2f2;
     }
 
     /* Removing underline from ul */
@@ -29,9 +30,34 @@
     nav ul a {
         color: #f2f2f2;
     }
-    h1{
-        font-size: 50px;
+
+    h1 {
+        font-size: 60px;
         font-family: 'Raleway', sans-serif;
-        color:#3c3b3a;
+        color: #3c3b3a;
+        font-weight: bolder;
+        padding: 10px 28px
+    }
+
+    p {
+        font-size: 30px;
+        font-family: 'Raleway', sans-serif;
+        padding: 10px 28px
+    }
+
+    .start {
+        background-color: #26a682;
+        border-radius: 20px;
+        border: none;
+        box-shadow: 10px 10px 10px grey;
+        color: #f2f2f2;
+        font-size: 40px;
+        font-weight: bold;
+        padding: 2px 8px;
+        width: 60%
+    }
+
+    .girl {
+        width: 20%;  
     }
 }
