--- a/midterm/style.css
+++ b/midterm/style.css
@@ -1,12 +1,5 @@
 /* For Mobile */
 @media only screen and (min-width:320px) {
-    .logo-image {
-        width: 20%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
     #header {
         background-color: #3c3b3a;
     }
@@ -31,12 +24,42 @@
         color: #f2f2f2;
     }
 
+    .logo-image {
+        width: 20%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+
+
     h1 {
         font-size: 60px;
         font-family: 'Raleway', sans-serif;
         color: #3c3b3a;
         font-weight: bolder;
         padding: 10px 28px
+    }
+
+
+    h2 {
+        color: #3c3b3a;
+        font-size: 40px;
+        padding: 10px 28px
+    }
+
+    h3 {
+        color: #26a682;
+        font-size: 30px;
+        font-family: 'Raleway', sans-serif;
+        padding: 10px 28px
+    }
+
+
+    h4 {
+        font-size: 20px;
+        font-family: 'Raleway', sans-serif;
+        text-align: center;
     }
 
     p {
@@ -64,6 +87,10 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .grad {
+        width: 100%;
     }
 
     #simon {
@@ -97,32 +124,27 @@
         width: 35%;
     }
 
-    .grad {
+
+    #bar {
         width: 100%;
     }
 
-    h2 {
-        color: #3c3b3a;
-        font-size: 40px;
-    }
-
-    h3 {
-        color: #26a682;
-        font-size: 30px;
-        font-family: 'Raleway';
-    }
-
-    #bar{
-        width: 100%;
-    }
-
-    #More{
+    #More {
         background-color: #26a682;
         color: #f2f2f2;
         border-radius: 30px;
         border: none;
         font-family: 'Raleway', sans-serif;
         font-size: 20px;
-        width: 35%;  
+        width: 40%;
+    }
+
+    #footer-container {
+        background-color: #3c3b3a;
+    }
+
+    .footer {
+        color: #f2f2f2;
+        text-align: center;
     }
 }
