--- a/midterm/style.css
+++ b/midterm/style.css
@@ -68,6 +68,13 @@
         padding: 10px 28px
     }
 
+    .icon {
+        display: flex;
+        flex-direction: row;
+        font-size: 40px;
+        justify-content: space-evenly;
+    }
+
     .start {
         background-color: #26a682;
         border-radius: 20px;
@@ -79,6 +86,7 @@
         padding: 2px 8px;
         width: 60%
     }
+
 
     .girl {
         width: 60%;
