--- a/midterm/about.css
+++ b/midterm/about.css
@@ -32,11 +32,7 @@
     }
 
     h1 {
-        font-size: 50px;
-        font-family: 'Raleway', sans-serif;
-        color: #3c3b3a;
-        font-weight: bolder;
-        padding: 10px 28px
+        color: #f2f2f2;
     }
 
     h2 {
@@ -51,9 +47,7 @@
 
 
     p {
-        font-size: 30px;
-        font-family: 'Raleway', sans-serif;
-        padding: 10px 28px
+        font-size: 20px;
     }
 
     .construction {
@@ -79,19 +73,23 @@
         width: 0;
     }
 
-    .gry {
-        background-color: #f2f2f2;
-    }
-
     .grey {
-        background-color: #f2f2f2;
-    }
-    .back{
         background-color: #f2f2f2;
     }
 
     .container {
         background-color: #3c3b3a;
+    }
+
+    .sub {
+        background-color: #26a682;
+        border-radius: 10px;
+        border: none;
+        color: #f2f2f2;
+        font-size: 25px;
+        font-weight: bold;
+        width: 39%;
+        padding: 8px 20px;
     }
 
     #footer-container {
