working on home page

--- a/midterm/style.css
+++ b/midterm/style.css
@@ -70,20 +70,24 @@
 
     .icon {
         font-size: 30px;
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+    }
+    #scroll{
+        font-size: 0;
     }
 
     .start {
         background-color: #26a682;
         border-radius: 20px;
         border: none;
-        box-shadow: 10px 10px 10px grey;
+        box-shadow: 8px 10px 5px #f2f2f2;
         color: #f2f2f2;
-        font-size: 40px;
+        font-size: 30px;
         font-weight: bold;
         padding: 2px 8px;
-        width: 60%
+        width: 60%;
     }
 
 
@@ -126,22 +130,14 @@
         border: none;
         font-family: 'Raleway', sans-serif;
         font-size: 20px;
-        width: 35%;
+        font-weight: bold;
+        width:40%;
+        margin-right: auto;
     }
 
 
     #bar {
         width: 100%;
-    }
-
-    #More {
-        background-color: #26a682;
-        color: #f2f2f2;
-        border-radius: 30px;
-        border: none;
-        font-family: 'Raleway', sans-serif;
-        font-size: 20px;
-        width: 40%;
     }
 
     #footer-container {
