--- a/midterm/about.css
+++ b/midterm/about.css
@@ -33,28 +33,60 @@
 
     h1 {
         color: #f2f2f2;
+        text-align: center;
+        margin: 0;
     }
 
     h2 {
         color: #3c3b3a;
         font-size: 40px;
+        padding: 10px 28px;
+        margin: 0;
     }
 
     h3 {
         color: #26a682;
         font-size: 40px;
+        padding: 10px 28px;
+        margin: 0;
+
     }
 
 
     p {
         font-size: 20px;
+        padding: 10px 28px;
+    }
+
+    #keep {
+        font-size: 25px;
+        text-align: center;
     }
 
     .construction {
-        width: 50%;
+        width: 70%;
         display: block;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .about {
+        /* background-image: url(./mtm6201-midterm-master-files/images/about.jpg);
+        background-color: #26a682; */
+        background: 
+    /* top, transparent red, faked with gradient */ 
+    linear-gradient(
+      rgba(23, 97, 56, 0.45), 
+      rgba(1, 41, 19, 0.815)
+    ),
+    /* bottom, image */
+    url(./mtm6201-midterm-master-files/images/about.jpg);
+        background-repeat: no-repeat;
+        height:150px;
+        width:100%;
+        display:flex;
+        justify-content:center;
+        align-items:center;
     }
 
     .bar {
@@ -88,8 +120,11 @@
         color: #f2f2f2;
         font-size: 25px;
         font-weight: bold;
-        width: 39%;
+        width:40%;
         padding: 8px 20px;
+    }
+    .sponsors{
+        width: 30%;
     }
 
     #footer-container {
